src/main/metadata/objects/Tutorial__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>India Article Type</description>
    <fields>
        <fullName>Attachment_10__c</fullName>
        <description>This field will let you to add the attachments</description>
        <inlineHelpText>This field will let you to add the attachments</inlineHelpText>
        <label>Attachment 10</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment_1__c</fullName>
        <description>This field will let you to add the attachments</description>
        <inlineHelpText>This field will let you to add the attachments</inlineHelpText>
        <label>Attachment 1</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment_2__c</fullName>
        <description>This field will let you to add the attachments</description>
        <inlineHelpText>This field will let you to add the attachments</inlineHelpText>
        <label>Attachment 2</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>This field will let you to choose the Category</description>
        <inlineHelpText>This field will let you to choose the Category</inlineHelpText>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>sample1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sample2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sample3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>This field will let you to choose the Departments</description>
        <inlineHelpText>This field will let you to choose the Departments</inlineHelpText>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Sales - Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Sales - Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Sales - TCM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Sales - Part</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Sales - Recall/Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal &amp; Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Activation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Emergency_Level__c</fullName>
        <description>This field will let you to choose the Emergency Level</description>
        <inlineHelpText>This field will let you to choose the Emergency Level</inlineHelpText>
        <label>Emergency Level</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Information_Level__c</fullName>
        <description>This field will let you to choose the Information Level</description>
        <inlineHelpText>This field will let you to choose the Information Level</inlineHelpText>
        <label>Information Level</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Information_Source__c</fullName>
        <description>This field will let you to choose the Information Source</description>
        <inlineHelpText>This field will let you to choose the Information Source</inlineHelpText>
        <label>Information Source</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Information_Updated_Flag__c</fullName>
        <description>This field will let you to choose the Information Updated Flag</description>
        <inlineHelpText>This field will let you to choose the Information Updated Flag</inlineHelpText>
        <label>Information Updated Flag</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Departments__c</fullName>
        <description>This Field will let you to choose the Related Departments</description>
        <inlineHelpText>This Field will let you to choose the Related Departments</inlineHelpText>
        <label>Related Departments</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Remarks_for_Internal__c</fullName>
        <description>This field will tell you to choose Remarks for Internal</description>
        <inlineHelpText>This field will tell you to choose Remarks for Internal</inlineHelpText>
        <label>Remarks for Internal</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Tutorial</label>
    <pluralLabel>Tutorials</pluralLabel>
</CustomObject>